--- a/Openers_Lotion/Views/Lotions/Index.cshtml
+++ b/Openers_Lotion/Views/Lotions/Index.cshtml
@@ -5,10 +5,12 @@
 }
 
 <h1>Index</h1>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+@if (User.IsInRole("Administrator"))
+{
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+}
 <form asp-controller="Lotions" asp-action="Index" method="get">
     <p>
         <select asp-for="LotionType" asp-items="Model.SkinTypes">
@@ -71,9 +73,15 @@
                 @Html.DisplayFor(modelItem => item.Review)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    @if (User.IsInRole("Administrator"))
+                    {
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+                    }
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> 
+                    @if (User.IsInRole("Administrator"))
+                    {
                 <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    }
             </td>
         </tr>
 }
